kubernetes/6_deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-api-ms-db
  namespace: microservices
  labels:
    name: database
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      service: py-api-ms-db
  template:
    metadata:
      labels:
        service: py-api-ms-db
    spec:
      containers:
      - name: py-api-ms-db
        image: postgres:14.7
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-volume-mount
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: postgres-volume-mount
        persistentVolumeClaim:
          claimName: postgres-pvc
