kubernetes/8_deployment-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-api-ms
  namespace: microservices
  labels:
    name: py-api-ms
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: py-api-ms
  template:
    metadata:
      labels:
        app: py-api-ms
    spec:
      containers:
      - env:
        - name: FLASK_DEBUG
          valueFrom:
            configMapKeyRef:
              name: ms-config
              key: FLASK_DEBUG
        - name: APP_SETTINGS
          valueFrom:
            configMapKeyRef:
              name: ms-config
              key: APP_SETTINGS
        - name: SECRET_KEY
          valueFrom:
            configMapKeyRef:
              name: ms-config
              key: SECRET_KEY
        - name: APP_PORT
          valueFrom:
            configMapKeyRef:
              name: ms-config
              key: APP_PORT
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              name: postgres-credentials
              key: POSTGRES_USER
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: postgres-credentials
              key: POSTGRES_PASSWORD
        - name: POSTGRES_HOSTNAME
          valueFrom:
            configMapKeyRef:
              name: ms-config
              key: POSTGRES_HOSTNAME
        - name: POSTGRES_PORT
          valueFrom:
            configMapKeyRef:
              name: ms-config
              key: POSTGRES_PORT
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              name: ms-config
              key: POSTGRES_DB
        image: sauravm/py-api-ms:3.0
        imagePullPolicy: Always
        name: py-api-ms
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
