kubernetes/7_service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-api-ms-db
  namespace: microservices
  labels:
    service: py-api-ms-db
spec:
  selector:
    service: py-api-ms-db
  type: ClusterIP
  ports:
  - port: 5432
